--- a/modules/fooof_module/settings.yaml
+++ b/modules/fooof_module/settings.yaml
@@ -1,5 +1,5 @@
 analyze_channel: 13.0
-aperiodic_mode: fixed
+aperiodic_mode: knee
 channels_to_load: 13-16,24
 condition_groupings:
   '1':
@@ -25,25 +25,21 @@ condition_groupings:
   '2':
     label: www
     conditions:
-    - AknownVmeant
-    - known_a
-    - meant_v
+    - AdriveVlast
   '3':
     label: wwwwwwww
     conditions:
-    - meant_a
-    - known_av
-    - AmeantVdrive
+    - drive_a
 epoch_name: auditory_onset
 freq_range:
-- 1.0
-- 56.6
-freq_range_aperiodic_tuning:
 - 1
 - 300
+freq_range_aperiodic_tuning:
+- 30
+- 200
 individual_trials: no
-max_n_peaks: 3
-max_n_peaks_aperiodic_tuning: 15
+max_n_peaks: 5
+max_n_peaks_aperiodic_tuning: 5
 plt_log: no
 project_name: demo
 reference_name: default
