--- a/modules/fooof_module/settings.yaml
+++ b/modules/fooof_module/settings.yaml
@@ -1,5 +1,7 @@
 analyze_channel: 13.0
 aperiodic_mode: knee
+aperiodic_mode_tuning_max_n_peaks: knee
+aperiodic_mode_tuning_peak_threshold: knee
 channels_to_load: 13-16,24
 condition_groupings:
   '1':
@@ -23,11 +25,11 @@ condition_groupings:
     - meant_v
     - press_AV
   '2':
-    label: www
+    label: Testing
     conditions:
     - AdriveVlast
   '3':
-    label: wwwwwwww
+    label: Testing again
     conditions:
     - drive_a
 epoch_name: auditory_onset
@@ -35,15 +37,42 @@ freq_range:
 - 1
 - 300
 freq_range_aperiodic_tuning:
-- 30
-- 200
+- 1
+- 300
+freq_range_tuning_max_n_peaks:
+- 1
+- 300
+freq_range_tuning_peak_threshold:
+- 1
+- 300
 individual_trials: no
 max_n_peaks: 5
 max_n_peaks_aperiodic_tuning: 5
+max_n_peaks_tuning_peak_threshold: 5
+number_of_threshold_value_tuning_peak_threshold: 5
+peaks_range_tuning_max_n_peaks:
+- 1
+- 2
+- 3
+- 4
+- 5
+- 6
+- 7
+- 8
+- 9
+- 10
+- 11
+- 12
+- 13
+- 14
+- 15
 plt_log: no
 project_name: demo
 reference_name: default
 subject_code: DemoSubject
+threshold_value_range_tuning_peak_threshold:
+- 1
+- 10
 time_window_to_load:
 - -1
 - 2
