Changed {Condition #} to {Label}

--- a/modules/fooof_module/settings.yaml
+++ b/modules/fooof_module/settings.yaml
@@ -29,7 +29,7 @@ condition_groupings:
     conditions:
     - AdriveVlast
   '3':
-    label: Testing again
+    label: TestingW
     conditions:
     - drive_a
 epoch_name: auditory_onset
