--- a/modules/fooof_module/settings.yaml
+++ b/modules/fooof_module/settings.yaml
@@ -25,19 +25,13 @@ condition_groupings:
     - meant_v
     - press_AV
   '2':
-    label: Visual
+    label: W
     conditions:
-    - last_v
-    - drive_v
-    - known_v
-    - meant_v
+    - AdriveVlast
   '3':
-    label: Audio
+    label: WWW
     conditions:
-    - last_a
-    - drive_a
-    - known_a
-    - meant_a
+    - AmeantVdrive
 epoch_name: auditory_onset
 freq_range:
 - 1
@@ -63,6 +57,7 @@ peaks_range_tuning_max_n_peaks:
 plt_log: no
 project_name: demo
 reference_name: default
+standard_deviation: 1
 subject_code: DemoSubject
 threshold_value_range_tuning_peak_threshold:
 - 1
