--- a/modules/fooof_module/DESCRIPTION
+++ b/modules/fooof_module/DESCRIPTION
@@ -1,13 +1,18 @@
 Package: fooof_module
 Type: rave-pipeline
-Title: Please Add Title About What Your Pipeline Does in Caption Style
+Title: Fitting Oscillation and One Over F
 Version: 0.0.1
 Language: en-US
 Encoding: UTF-8
 License: MIT
 Authors@R: c(
-    person("your first name", "last/family name", email = "your.email@edu", role = c("aut", "cre"))
+    person("Nathan", "Kueh", email = "natkueh@seas.upenn.edu", role = c("aut")),
+    person("Roger", "Baddour", email = "rbaddour@seas.upenn.edu", role = c("aut")),
+    person("Benjamin", "Chan", email = "blchan@seas.upenn.edu", role = c("aut")),
+    person("Andrew", "Chiang", email = "achiang7@seas.upenn.edu", role = c("aut")),
+    person("Zhengjia", "Wang", email = "zhengjia.wang@pennmedicine.upenn.edu", role = c("aut", "ths")),
+    person("Michael", "Beauchamp", email = "michael.beauchamp@pennmedicine.upenn.edu", role = c("aut", "ths"))
     )
 Description: Add short sentences to describe what this pipeline does
-BugReports: https://github.com/your_github_name/pipeline_repository/issues
-URL: https://github.com/your_github_name/pipeline_repository
+BugReports: https://github.com/achiang7UPenn/rave-pipelines/issues
+URL: https://github.com/achiang7UPenn/rave-pipelines
