--- a/modules/fooof_module/settings.yaml
+++ b/modules/fooof_module/settings.yaml
@@ -24,6 +24,20 @@ condition_groupings:
     - meant_av
     - meant_v
     - press_AV
+  '2':
+    label: Visual
+    conditions:
+    - last_v
+    - drive_v
+    - known_v
+    - meant_v
+  '3':
+    label: Audio
+    conditions:
+    - last_a
+    - drive_a
+    - known_a
+    - meant_a
 epoch_name: auditory_onset
 freq_range:
 - 1
@@ -49,7 +63,7 @@ peaks_range_tuning_max_n_peaks:
 plt_log: no
 project_name: demo
 reference_name: default
-standard_deviation: 3
+standard_deviation: 1
 subject_code: DemoSubject
 threshold_value_range_tuning_peak_threshold:
 - 1
